make coded with responsive

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             body {
                 width: 100%;
             }
+
+            .coded-with {
+                position: unset;
+                margin-top: 20px;
+                text-align: right;
+            }
         }
     </style>
 </head>
