--- a/index.html
+++ b/index.html
@@ -1,142 +1,84 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>lennis-dev's email-obfuscater</title>
+        <link rel="stylesheet" href="./static/style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lennis-dev's email-obfuscater</title>
-    <style>
-        :root {
-            --background: #181818;
-        }
-
-        body {
-            background: var(--background);
-            width: 700px;
-            margin: auto;
-            margin-top: 100px;
-            word-wrap: break-word;
-        }
-
-        a {
-            color: #2244FF;
-        }
-
-        code {
-            background: #111;
-            font-family: monospace;
-            color: #ccc;
-            padding: 10px;
-            border-radius: 8px;
-            font-size: 16px;
-            line-height: 36px;
-            display: block;
-            margin: 20px;
-        }
-
-        input {
-            background: #111;
-            font-family: monospace;
-            color: #ccc;
-            padding: 5px 10px;
-            border-radius: 8px;
-            font-size: 16px;
-            line-height: 36px;
-            margin: 20px;
-            outline: none;
-            border: none;
-            margin-top: none;
-            width: calc(100% - 60px);
-        }
-
-        .notvalid {
-            color: #181818;
-            margin: 0 20px;
-            font-size: 16px;
-            font-family: monospace;
-            transition: .2s;
-        }
-
-        input:invalid~.notvalid {
-            color: #F00;
-        }
-
-        .infotext {
-            font-size: 20px;
-            margin: 20px;
-            color: #ccc;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .coded-with {
-            position: absolute;
-            right: 10px;
-            bottom: 10px;
-        }
-
-        @media screen and (max-width: 700px) {
-            body {
-                width: 100%;
-            }
-
-            .coded-with {
-                position: unset;
-                margin-top: 20px;
-                text-align: right;
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <noscript>
+    <body>
+        <noscript>
+            <div class="infotext">
+                <h1>THIS PAGE NEEDS JAVASCRIPT</h1>
+            </div>
+        </noscript>
         <div class="infotext">
-            <h1>THIS PAGE NEEDS JAVASCRIPT</h1>
+            <h1>How does it work?</h1>
+
+            This tool encodes your email address in base64 and splits this
+            base64 character string into different sized parts and reverses the
+            order.<br /><br />
+
+            the browser splits the string back into the different parts and
+            inverts the sequence again, then decodes the valid base64 code.
+            After that it creates a new link element with the email address and
+            the matching mailto link. finally it inserts this element on the
+            page at the position where the code was.
+
+            <obfuscated-email
+                obfuscated="ZGVtb0BsZW5uaXMuZGV2"
+            ></obfuscated-email>
         </div>
-    </noscript>
-    <div class="infotext">
-        <h1>How does it work?</h1>
-
-        This tool encodes your email address in base64 and splits this base64 character string into different sized parts and reverses the order.<br /><br />
-
-        the browser splits the string back into the different parts and inverts the sequence again, then decodes the valid base64 code. After that it creates a new link element with the email address and the matching mailto link. finally it inserts this element on the page at the position where the code was.
-
-    </div>
-    <div>
-        <input id="email" placeholder="please enter your email address here" onkeyup="x(this.value)" type="email">
-        <div class="notvalid">
-            this does not look like a real email address
+        <div>
+            <input
+                id="email"
+                placeholder="please enter your email address here"
+                type="email"
+            />
+            <div class="notvalid">
+                this does not look like a real email address
+            </div>
         </div>
-    </div>
-    <div>
-        <code>&lt;script&gt;var a=atob(&quot;<span id="code-mail"></span>&quot;.split(&quot;?&quot;).reverse().join(&quot;&quot;)),b=document.createElement(&quot;a&quot;);b.innerText=a;b.href=&quot;mailto:&quot;+a;document.currentScript.replaceWith(b);&lt;/script&gt;</code>
-    </div>
-    <div class="infotext coded-with">
-        Coded With &#10084;&#65039; by <a href="https://github.com/lennis-dev">lennis-dev</a>
-
-    </div>
-    <script>
-        function x(input) {
-            input = btoa(input);
-            input = input.split('');
-            var length = input.length;
-            var offset = length;
-            let pairs = [];
-            while (offset > 0) {
-                var max = Math.min(8, offset);
-                var rand = Math.floor(Math.random() * (max - 1 + 1) + 1);
-                var string = "";
-                for (let i = 0; i < rand; i++) {
-                    string += input[length - offset];
-                    offset -= 1;
-                }
-                pairs.push(string);
-            }
-
-            document.getElementById("code-mail").innerText = pairs.reverse().join("?");
-        }
-    </script>
-</body>
-
+        <div class="output">
+            <h3>Emmbeded Code (Simple)</h3>
+            <div class="benefits">
+                <strong>Benefits:</strong><br />
+                - You only need this code and nothing else
+            </div>
+            <br />
+            <div class="disadvantage">
+                <strong>Disadvantages:</strong><br />
+                - Not compatible with all Content-Security-Policy headers, which
+                can block the script from running.
+            </div>
+            <code
+                >&lt;script&gt;var a=atob(&quot;<span id="code-mail"></span
+                >&quot;.split(&quot;?&quot;).reverse().join(&quot;&quot;)),b=document.createElement(&quot;a&quot;);b.innerText=a;b.href=&quot;mailto:&quot;+a;document.currentScript.replaceWith(b);&lt;/script&gt;</code
+            >
+            <h3>Reference Code (More Complex)</h3>
+            <div class="benefits">
+                <strong>Benefits:</strong><br />
+                - Better compatibility with Content-Security-Policy headers.<br />
+                - Cleaner code and simpler to update
+            </div>
+            <br />
+            <div class="disadvantage">
+                <strong>Disadvantages:</strong><br />
+                - Need to embed a <a href="./embed-script.js">this script</a> on
+                the each page, where it is used.
+            </div>
+            <code>
+                &lt;obfuscated-email obfuscated="<span id="code-html"></span
+                >"&gt;&lt;/obfuscated-email&gt;
+            </code>
+        </div>
+        <div class="infotext coded-with">
+            Coded With &#10084;&#65039; by
+            <a href="https://github.com/lennis-dev">lennis-dev</a>
+        </div>
+        <script src="./static/script.js"></script>
+        <script src="./embed-script.js"></script>
+    </body>
 </html>
