Update obfuscated demo email string in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             page at the position where the code was.
 
             <obfuscated-email
-                obfuscated="ZGVtb0BsZW5uaXMuZGV2"
+                obfuscated="2?V?aXMuZG?b0BsZW5u?ZGVt"
             ></obfuscated-email>
         </div>
         <div>
